<resources>

    <!-- *** SYSTEM *** -->
    <string name="app_name" translatable="false">GuardNet-Lite-Gabrovo</string>
    <string name="MaxDevices" translatable="false">10</string>
    <string name="default_notification_email" translatable="false">priemna@mvr.bg</string>
    <string name="default_gallery_view" translatable="false">3</string>
    <string name="URL" translatable="false">URL</string>
    <string name="DefaultURL" translatable="false">http://192.168.0.100:8080</string>


    <string-array name="PublicCamerasEmbed">
        <item>https://bitdash-a.akamaihd.net/content/MI201109210084_1/m3u8s/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.m3u8</item>
        <item>https://frn.rtsp.me/jIhfrGrPiBfLtpaIRjZAtA/1598170533/hls/883assBN.m3u8</item>
        <item>https://frn.rtsp.me/fv3hnhNWOAXEi9IzfE18pw/1598029710/hls/fQrt2T8E.m3u8</item>
        <item>https://frn.rtsp.me/C9uO9p6cuRq7U5NK7Q_Jzw/1598029710/hls/BZsffinY.m3u8</item>
        <item>https://frn.rtsp.me/C9uO9p6cuRq7U5NK7Q_Jzw/1598029710/hls/iheyDBzQ.m3u8</item>
        <item>https://frn.rtsp.me/C9uO9p6cuRq7U5NK7Q_Jzw/1598029710/hls/ABiQSGrk.m3u8</item>
        <item>https://frn.rtsp.me/C9uO9p6cuRq7U5NK7Q_Jzw/1598029710/hls/2bahRDFG.m3u8</item>
        <item>Bryanska</item>
        <item>https://frn.rtsp.me/C9uO9p6cuRq7U5NK7Q_Jzw/1598029710/hls/n2t6hQdd.m3u8</item>
        <item>https://frn.rtsp.me/C9uO9p6cuRq7U5NK7Q_Jzw/1598029710/hls/EbraNShY.m3u8</item>
        <item>https://frn.rtsp.me/C9uO9p6cuRq7U5NK7Q_Jzw/1598029710/hls/85S8e2ht.m3u8</item>
    </string-array>
    <!--    <string-array name="PublicCamerasEmbed">-->
    <!--        <item>https://rtsp.me/embed/883assBN/</item>-->
    <!--        <item>https://rtsp.me/embed/fQrt2T8E/</item>-->
    <!--        <item>https://rtsp.me/embed/BZsffinY/</item>-->
    <!--        <item>https://rtsp.me/embed/iheyDBzQ/</item>-->
    <!--        <item>https://rtsp.me/embed/ABiQSGrk/</item>-->
    <!--        <item>https://rtsp.me/embed/2bahRDFG/</item>-->
    <!--        <item>Bryanska</item>-->
    <!--        <item>https://rtsp.me/embed/n2t6hQdd/</item>-->
    <!--        <item>https://rtsp.me/embed/EbraNShY/</item>-->
    <!--        <item>https://rtsp.me/embed/85S8e2ht/</item>-->
    <!--    </string-array>-->
    <!-- ^^^ SYSTEM ^^^ -->

    <!-- *** VIEW *** -->
    <string name="add_new">Add</string>
    <string name="save_user_camera">Save</string>
    <string name="CamViewer">Camera Viewer</string>
    <string-array name="PublicCameras">
        <item>Radecka</item>
        <item>Bus Station</item>
        <item>Balkan</item>
        <item>DHS</item>
        <item>The wheel</item>
        <item>St.Karadja</item>
        <item>Bryanska</item>
        <item>LIDL</item>
        <item>Shavara</item>
        <item>Center</item>
    </string-array>


    <!-- ^^^ VIEW ^^^ -->

    <!-- *** ADD NEW *** -->
    <string name="AddNew">Add new camera</string>
    <string name="DisplayName">Display Name</string>
    <string name="AddNewName">My store</string>
    <string name="Auth">AUTHENTICATION</string>
    <string name="Username">User name</string>
    <string name="name">John Doe</string>
    <string name="Password">Password</string>
    <string name="ShowPass">Show Password</string>
    <!-- ^^^ ADD NEW ^^^ -->

    <!-- *** SETTINGS MENU *** -->
    <string name="Settings">Settings</string>
    <string name="Notifications">Notifications</string>
    <string name="Gallery">Gallery</string>
    <string name="Language">Language</string>
    <!-- ^^^ SETTINGS MENU ^^^ -->

    <!-- *** NOTIFICATIONS SETTINGS *** -->
    <string name="NotificationsSend">SEND NOTIFICATIONS</string>
    <string name="NotificationsShow">SHOW NOTIFICATIONS</string>
    <string name="AddEmail">Add email</string>
    <string name="Email2nd">second@email.com</string>
    <string name="Email3rd">third@email.com</string>

    <string-array name="NotificationTrigger">
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>15 seconds</item>
        <item>20 seconds</item>
        <item>25 seconds</item>
        <item>30 seconds</item>
    </string-array>
    <!-- ^^^ NOTIFICATIONS SETTINGS ^^^ -->

    <!-- *** CALENDAR *** -->
    <string name="CalendarEnableDateTimeMonitoring">MONITORING BY DATE AND TIME</string>
    <!-- ^^^ CALENDAR ^^^ -->

    <!-- *** CLOCK *** -->
    <string name="From">From</string>
    <string name="To">To</string>
    <!-- ^^^ CLOCK ^^^ -->

    <!-- *** GALLERY *** -->
    <string name="GalleryEmpty">Gallery is empty</string>
    <!-- ^^^ GALLERY ^^^ -->

    <!-- *** LANGUAGE SETTINGS *** -->
    <string-array name="Languages">
        <item>English</item>
        <item>Bulgarian</item>
    </string-array>
    <!-- ^^^ LANGUAGE SETTINGS ^^^ -->

    <!-- *** MESSAGES *** -->
    <string name="ItemAddOк">New camera has been added successfully !</string>
    <string name="ItemInvalidField">Fields cannot contain ";" !</string>
    <string name="ItemFieldEmpty">Field cannot be empty !</string>
    <string name="ItemMaxLimit">Camera limit reached !</string>
    <!-- ^^^ MESSAGES ^^^ -->
    <string name="CamAdded">Add</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="camera_front_layer">Camera Fragment</string>
    <!-- Strings used for fragments for navigation -->

    <!-- ^^^ USER MESSAGES ^^^ -->
</resources>